# ifrost

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ifrost/: __init__.py
src/ifrost/models/: 1d_emi_model.py  2layerver.xlsx  3layerver.xlsx  one_d_emi_model.py  test.py  utils.py
